Fix parallel offset. Rename to ParallelBlock.
Add scrollbar style. (webkit)

--- a/frontend/global.css
+++ b/frontend/global.css
@@ -5,6 +5,25 @@
  */
 
 html, body {
+    overflow: overlay;
     margin: 0px 0px;
     padding: 0px 0px;
+}
+
+*::-webkit-scrollbar {
+    width: 0.5rem;
+}
+ 
+*::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.0);
+    border-radius: 0.25rem;
+}
+ 
+*::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 0.25rem;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 255, 255, 0.4);
 }
